<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_group_48"
            android:tint="@color/text_1"
            app:layout_constraintBottom_toTopOf="@+id/register_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/sansbold"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/text_1"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/login_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_icon"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:startIconDrawable="@drawable/ic_user_24dp"
            app:startIconTint="@color/text_2"
            android:foregroundTint="@color/text_2"
            app:layout_constraintBottom_toTopOf="@id/login_pswd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansbold"
                android:hint="@string/user"
                android:minHeight="48dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:foregroundTint="@color/text_2"
            app:startIconTint="@color/text_2"
            app:passwordToggleTint="@color/text_2"
            app:endIconTint="@color/text_2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@id/signup_action"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_user" >

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwd"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/sansbold"
            android:text="@string/register_action"
            app:layout_constraintBottom_toTopOf="@id/login_or"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_pswd" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/text_2"
            android:textAlignment="center"
            android:fontFamily="@font/sansbold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/sign_in_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_action"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_or"
            app:layout_constraintBottom_toTopOf="@id/linear_container"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button"
            app:layout_constraintBottom_toBottomOf="parent">
<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="15sp"-->
<!--                android:textColor="@color/text_2"-->
<!--                android:text="@string/not_account"/>-->
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:padding="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="15sp"-->
<!--                android:background="@color/fui_transparent"-->
<!--                android:textColor="@color/blue"-->
<!--                android:text="@string/register_title"/>-->

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>